unpackaged/main/default/objects/Long_Term_Goal__c/Long_Term_Goal__c.object-meta.xml
<CustomObject>
    <label>Long Term Goal</label>
    <nameField>
        <displayFormat>LT-{00000}</displayFormat>
        <label>Long Term Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Long Term Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>