unpackaged/main/default/objects/Long_Term_Goal__c/fields/Long_Term_Goal__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Goal__c</fullName>
    <label>Long Term Goal</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>