unpackaged/main/default/objects/Long_Term_Goal__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the owner of the Long Term Goal.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Long_Term_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>