unpackaged/main/default/objects/Long_Term_Goal__c/validationRules/Long_Term_Goal_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Long_Term_Goal_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Due_Date__c) &lt;&gt;&quot;&quot;,  TEXT(Status__c)=&quot;Ongoing&quot; )</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>The Due Date field must be left blank if the Status is Ongoing</errorMessage>
</ValidationRule>