unpackaged/main/default/objects/Long_Term_Goal__c/validationRules/Long_Term_Goal_Date1.validationRule-meta.xml
<ValidationRule>
    <fullName>Long_Term_Goal_Date1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Due_Date__c)=&quot;&quot;,TEXT(Status__c)&lt;&gt;&quot;Ongoing&quot;)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>You must complete the Due Date field.</errorMessage>
</ValidationRule>